--- a/build-aux/makefile-version.am
+++ b/build-aux/makefile-version.am
@@ -31,84 +31,18 @@
 #
 #   @BINDLE_BINARIES_BSD_LICENSE_END@
 #
-#   @configure_input@
-#
-#   Makefile.am - automate compiling on a unix platform
+#   contrib/makefile-version.am
 #
 
-# Sub directories
-SUBDIRS					=
-DIST_SUBDIRS				=
+
+BUILT_SOURCES				+= include/git-package-version
 
 
-# Global flags
-AM_LIBS					=
-AM_LDFLAGS				=
-AM_CFLAGS				= -O2 $(CFLAGS_WARNINGS)
-AM_CXXFLAGS				= -O2 @AM_CXXFLAGS@
-AM_OBJCFLAGS				= -O2 @AM_OBJCFLAGS@
-AM_CPPFLAGS				= -O2 -UPMARK -DHAVE_CONFIG_H=1 -I$(top_builddir)/include -I$(top_srcdir)/include -DSYSCONFDIR="\"$(sysconfdir)\""
-ACLOCAL_AMFLAGS				= -I m4 -W all -W error
-AM_MAKEINFOFLAGS                        = --no-split
-DEFS					=
+.PHONY: include/git-package-version
 
 
-# automake targets
-check_PROGRAMS				=
-doc_DATA				=
-include_HEADERS				=
-lib_LTLIBRARIES				=
-man_MANS				=
-info_TEXINFOS				=
-noinst_LTLIBRARIES			=
-noinst_HEADERS				=
-noinst_PROGRAMS				=
-bin_PROGRAMS				=
-bin_SCRIPTS				=
-sbin_SCRIPTS				= src/bindlize.sh
+include/git-package-version:
+	@@GIT_VERSION_SCRIPT@ $(top_srcdir) > /dev/null 2>&1
 
-
-# lists
-BUILT_SOURCES				=
-TESTS					=
-XFAIL_TESTS				=
-EXTRA_MANS				=
-EXTRA_DIST				= build-aux/autogen.sh \
-					  build-aux/git-package-version \
-					  build-aux/git-package-version.sh
-CLEANFILES				= \
-					  $(builddir)/a.out   $(srcdir)/a.out \
-					  $(builddir)/*/a.out $(srcdir)/*/a.out \
-					  config.h.in~ $(srcdir)/config.h.in~ \
-					  $(man_MANS) \
-					  $(bin_SCRIPTS) \
-					  $(sbin_SCRIPTS) \
-					  @PACKAGE_TARNAME@-*.tar.* \
-					  @PACKAGE_TARNAME@-*.zip
-DISTCHECK_CONFIGURE_FLAGS		= --enable-strictwarnings
-
-
-# Makefile includes
-include contrib/bindletools/build-aux/makefile-autotools.am
-include contrib/bindletools/build-aux/makefile-subst.am
-include contrib/bindletools/build-aux/makefile-version.am
-
-
-# custom targets
-src/bindlize.sh: Makefile src/bindlize.sh.in
-	@$(do_subst_fn)
-
-
-# local targets
-install-exec-local:
-
-install-data-local:
-
-uninstall-local:
-
-clean-local:
-
-distclean-local:
-	rm -fR $(srcdir)/autom4te.cache
 
 # end of automake file
