Adding perl modules to Makefile.

--- a/Makefile.am
+++ b/Makefile.am
@@ -67,7 +67,9 @@ bindleinclude_HEADERS			= \
 lib_LTLIBRARIES				= lib/libbindle.la
 man_MANS				=
 info_TEXINFOS				=
-noinst_DATA				= tests/utf8test-ascii.txt \
+noinst_DATA				= \
+					  lib/perl-bindletools/built-by-make \
+					  tests/utf8test-ascii.txt \
 					  tests/utf8test-invalid-continuation.txt \
 					  tests/utf8test-invalid-length.txt \
 					  tests/utf8test-mixed.txt \
@@ -88,6 +90,15 @@ sbin_SCRIPTS				=
 
 
 # lists
+PERL_FILES				= lib/perl-bindletools/Changes \
+					  lib/perl-bindletools/MANIFEST \
+					  lib/perl-bindletools/Makefile.PL \
+					  lib/perl-bindletools/README \
+					  lib/perl-bindletools/lib/Bindle/CGI.pm \
+					  lib/perl-bindletools/lib/Bindle/Version.pm \
+					  lib/perl-bindletools/src/vars.pl \
+					  lib/perl-bindletools/t/CGI.t \
+					  lib/perl-bindletools/t/Version.t
 BUILT_SOURCES				=
 TESTS					= $(noinst_SCRIPTS)
 XFAIL_TESTS				=
@@ -103,18 +114,20 @@ EXTRA_DIST				= build-aux/autogen.sh \
 					  m4/bindle-git.m4 \
 					  m4/bindle-xxd.m4 \
 					  tests/utf8test.sh \
+					  $(PERL_FILES) \
 					  $(noinst_DATA)
 CLEANFILES				= \
 					  $(builddir)/a.out   $(srcdir)/a.out \
 					  $(builddir)/*/a.out $(srcdir)/*/a.out \
 					  config.h.in~ $(srcdir)/config.h.in~ \
+					  lib/perl-bindletools/built-by-make \
 					  $(man_MANS) \
 					  $(bin_SCRIPTS) \
 					  $(sbin_SCRIPTS) \
 					  $(noinst_SCRIPTS) \
 					  @PACKAGE_TARNAME@-*.tar.* \
 					  @PACKAGE_TARNAME@-*.zip
-DISTCHECK_CONFIGURE_FLAGS		= --enable-strictwarnings
+DISTCHECK_CONFIGURE_FLAGS		= --enable-strictwarnings --with-perl=$(PERL_PATH)
 
 
 # macros for lib/libbindle.la
@@ -141,23 +154,49 @@ include $(srcdir)/build-aux/makefile-version.am
 
 
 # custom targets
-.PHONY:
+.PHONY: install-perl
 
 tests/utf8test-%.sh: Makefile tests/utf8test.sh
 	@rm -f $(@)
 	@mkdir -p tests
 	cp $(top_srcdir)/tests/utf8test.sh $(@)
 	@chmod 755 $(@)
-	
+
+
+lib/perl-bindletools/Makefile: $(PERL_FILES)
+	chmod -R u+w $(srcdir)/lib/perl-bindletools
+	cd $(srcdir)/lib/perl-bindletools && $(PERL) Makefile.PL
+	touch $(srcdir)/lib/perl-bindletools
+
+
+lib/perl-bindletools/built-by-make: lib/perl-bindletools/Makefile
+	rm -f $(@)
+	chmod -R u+w $(srcdir)/lib/perl-bindletools
+	cd $(srcdir)/lib/perl-bindletools && $(MAKE) test
+	mkdir -p `dirname $(@)`
+	touch $(@)
+
+
+perl-install: lib/perl-bindletools/built-by-make
+	cd $(srcdir)/lib/perl-bindletools && make install
+
 
 # local targets
 install-exec-local:
 
 install-data-local:
+	@echo "*******************************************************"
+	@echo "*                                                     *"
+	@echo "*  To install perl module, type: 'make perl-install'  *"
+	@echo "*                                                     *"
+	@echo "*******************************************************"
 
 uninstall-local:
 
 clean-local:
+	test -f $(srcdir)/lib/perl-bindletools/Makefile \
+	   && { cd $(srcdir)/lib/perl-bindletools && $(MAKE) distclean; } \
+	   || { cd $(srcdir)/lib/perl-bindletools; }
 
 distclean-local:
 	rm -fR $(srcdir)/autom4te.cache
