--- a/lib/perl-bindletools/lib/Bindle/Version.pm.in
+++ b/lib/perl-bindletools/lib/Bindle/Version.pm.in
@@ -49,7 +49,7 @@ our @ISA                = qw(Exporter);
 our @EXPORT_OK          = qw();
 our %EXPORT_TAGS        = qw();
 our @EXPORT             = qw();
-our $VERSION            = '0.01';
+our $VERSION            = '@PACKAGE_VERSION@';
 
 
 # end of module
