--- a/configure.ac
+++ b/configure.ac
@@ -48,16 +48,9 @@ AC_SUBST([RELEASE_MONTH],["September 2012"])
 #    Age        -- How many seqential past API versions is supported by
 #                  this implementation
 # Format => Current:Revision:Age
-AC_SUBST([LIB_VERSION_CURRENT],  [0])
-AC_SUBST([LIB_VERSION_REVISION], [0])
-AC_SUBST([LIB_VERSION_AGE],      [0])
-AC_SUBST([LIB_VERSION_INFO],     [${LIB_VERSION_CURRENT}:${LIB_VERSION_REVISION}:${LIB_VERSION_AGE}])
-AC_SUBST([LIB_RELEASE_INFO],     [${LIB_VERSION_CURRENT}]) # used by Win32 DLLs
-AC_DEFINE_UNQUOTED([LIB_VERSION_CURRENT],  [${LIB_VERSION_CURRENT}],  [current version number of this API])
-AC_DEFINE_UNQUOTED([LIB_VERSION_REVISION], [${LIB_VERSION_REVISION}], [revision of the implementation of the API version])
-AC_DEFINE_UNQUOTED([LIB_VERSION_AGE],      [${LIB_VERSION_AGE}],      [seqential past API versions supported by this implementation])
-AC_DEFINE_UNQUOTED([LIB_VERSION_INFO],     ["$LIB_VERSION_INFO"],   [libtool version string])
-AC_DEFINE_UNQUOTED([LIB_RELEASE_INFO],     ["$LIB_RELEASE_INFO"],   [Win32 DLL version string])
+# Convenience macro:
+#    AC_BINDLE_LIBTOOL_VERSION_INFO(current, revision, age)
+AC_BINDLE_LIBTOOL_VERSION_INFO(0, 0, 0)
 
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_SRCDIR([build-aux/autogen.sh])
