--- a/bindletools.xcodeproj/xcshareddata/xcschemes/bindle: libbindle.a.xcscheme
+++ b/bindletools.xcodeproj/xcshareddata/xcschemes/bindle: libbindle.a.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0460"
+   LastUpgradeVersion = "0500"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A01156E0175B010C008E66FA"
-               BuildableName = "libbindle-osx.a"
-               BlueprintName = "bindle-osx"
+               BlueprintIdentifier = "A01156E8175B0118008E66FA"
+               BuildableName = "libbindle.a"
+               BlueprintName = "bindle"
                ReferencedContainer = "container:bindletools.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
