--- a/build-aux/makefile-subst.am
+++ b/build-aux/makefile-subst.am
@@ -34,6 +34,33 @@
 #   contrib/makefile-subst.am
 #
 
+# define directory locations for CPP
+AM_CPPFLAGS				+= -DPREFIX="\"$(prefix)\""
+AM_CPPFLAGS				+= -DEXEC_PREFIX="\"$(exec_prefix)\""
+AM_CPPFLAGS				+= -DBINDIR="\"$(bindir)\""
+AM_CPPFLAGS				+= -DBUILDDIR="\"$(builddir)\""
+AM_CPPFLAGS				+= -DDATADIR="\"$(datadir)\""
+AM_CPPFLAGS				+= -DDATAROOTDIR="\"$(datarootdir)\""
+AM_CPPFLAGS				+= -DDOCDIR="\"$(docdir)\""
+AM_CPPFLAGS				+= -DDVIDIR="\"$(dvidir)\""
+AM_CPPFLAGS				+= -DHTMLDIR="\"$(htmldir)\""
+AM_CPPFLAGS				+= -DINCLUDEDIR="\"$(includedir)\""
+AM_CPPFLAGS				+= -DINFODIR="\"$(infodir)\""
+AM_CPPFLAGS				+= -DLIBDIR="\"$(libdir)\""
+AM_CPPFLAGS				+= -DLIBEXECDIR="\"$(libexecdir)\""
+AM_CPPFLAGS				+= -DLOCALEDIR="\"$(localedir)\""
+AM_CPPFLAGS				+= -DLOCALSTATEDIR="\"$(localstatedir)\""
+AM_CPPFLAGS				+= -DMANDIR="\"$(mandir)\""
+AM_CPPFLAGS				+= -DPDFDIR="\"$(pdfdir)\""
+AM_CPPFLAGS				+= -DPKGDATADIR="\"$(pkgdatadir)\""
+AM_CPPFLAGS				+= -DPKGINCLUDEDIR="\"$(pkgincludedir)\""
+AM_CPPFLAGS				+= -DPKGLIBDIR="\"$(pkglibdir)\""
+AM_CPPFLAGS				+= -DPKGLIBEXECDIR="\"$(pkglibexecdir)\""
+AM_CPPFLAGS				+= -DPSDIR="\"$(psdir)\""
+AM_CPPFLAGS				+= -DSBINDIR="\"$(sbindir)\""
+AM_CPPFLAGS				+= -DSHAREDSTATEDIR="\"$(sharedstatedir)\""
+AM_CPPFLAGS				+= -DSYSCONFDIR="\"$(sysconfdir)\""
+
 
 # substitution routine
 do_subst = sed \
@@ -58,25 +85,30 @@ do_subst = sed \
 	-e 's,[@]LIB_VERSION_INFO[@],$(LIB_VERSION_INFO),g' \
 	-e 's,[@]LIB_RELEASE_INFO[@],$(LIB_RELEASE_INFO),g' \
 	-e 's,[@]prefix[@],$(prefix),g' \
+	-e 's,[@]exec_prefix[@],$(exec_prefix),g' \
 	-e 's,[@]bindir[@],$(bindir),g' \
-	-e 's,[@]sbindir[@],$(sbindir),g' \
-	-e 's,[@]libexecdir[@],$(libexecdir),g' \
-	-e 's,[@]sysconfdir[@],$(sysconfdir),g' \
-	-e 's,[@]sharedstatedir[@],$(sharedstatedir),g' \
-	-e 's,[@]localstatedir[@],$(localstatedir),g' \
-	-e 's,[@]libdir[@],$(libdir),g' \
-	-e 's,[@]includedir[@],$(includedir),g' \
-	-e 's,[@]oldincludedir[@],$(oldincludedir),g' \
-	-e 's,[@]datarootdir[@],$(datarootdir),g' \
 	-e 's,[@]datadir[@],$(datadir),g' \
-	-e 's,[@]infodir[@],$(infodir),g' \
-	-e 's,[@]localedir[@],$(localedir),g' \
-	-e 's,[@]mandir[@],$(mandir),g' \
+	-e 's,[@]datarootdir[@],$(datarootdir),g' \
 	-e 's,[@]docdir[@],$(docdir),g' \
-	-e 's,[@]htmldir[@],$(htmldir),g' \
 	-e 's,[@]dvidir[@],$(dvidir),g' \
+	-e 's,[@]htmldir[@],$(htmldir),g' \
+	-e 's,[@]includedir[@],$(includedir),g' \
+	-e 's,[@]infodir[@],$(infodir),g' \
+	-e 's,[@]libdir[@],$(libdir),g' \
+	-e 's,[@]libexecdir[@],$(libexecdir),g' \
+	-e 's,[@]localedir[@],$(localedir),g' \
+	-e 's,[@]localstatedir[@],$(localstatedir),g' \
+	-e 's,[@]mandir[@],$(mandir),g' \
+	-e 's,[@]oldincludedir[@],$(oldincludedir),g' \
 	-e 's,[@]pdfdir[@],$(pdfdir),g' \
+	-e 's,[@]pkgdatadir[@],$(pkgdatadir),g' \
+	-e 's,[@]pkgincludedir[@],$(pkgincludedir),g' \
+	-e 's,[@]pkglibdir[@],$(pkglibdir),g' \
+	-e 's,[@]pkglibexecdir[@],$(pkglibexecdir),g' \
 	-e 's,[@]psdir[@],$(psdir),g' \
+	-e 's,[@]sbindir[@],$(sbindir),g' \
+	-e 's,[@]sharedstatedir[@],$(sharedstatedir),g' \
+	-e 's,[@]sysconfdir[@],$(sysconfdir),g' \
 	$(SUBST_EXPRESSIONS)
 do_subst_fn = \
 		echo "do_subst < ${@}.in > ${@}"; \
