Adding autoconf tests for PostgreSQL and SQLite3.

--- a/Makefile.am
+++ b/Makefile.am
@@ -112,6 +112,10 @@ EXTRA_DIST				= build-aux/autogen.sh \
 					  lib/libbindle.sym \
 					  m4/bindle-gcc.m4 \
 					  m4/bindle-git.m4 \
+					  m4/bindle-libtool.m4 \
+					  m4/bindle-perl.m4 \
+					  m4/bindle-postgresql.m4 \
+					  m4/bindle-sqlite3.m4 \
 					  m4/bindle-xxd.m4 \
 					  tests/utf8test.sh \
 					  $(PERL_FILES) \
