--- a/build-aux/makefile-subst.am
+++ b/build-aux/makefile-subst.am
@@ -38,7 +38,7 @@
 AM_CPPFLAGS				+= -DPREFIX="\"$(prefix)\""
 AM_CPPFLAGS				+= -DEXEC_PREFIX="\"$(exec_prefix)\""
 AM_CPPFLAGS				+= -DBINDIR="\"$(bindir)\""
-AM_CPPFLAGS				+= -DBUILDDIR="\"$(builddir)\""
+AM_CPPFLAGS				+= -DBUILDDIR="\"$(abs_builddir)\""
 AM_CPPFLAGS				+= -DDATADIR="\"$(datadir)\""
 AM_CPPFLAGS				+= -DDATAROOTDIR="\"$(datarootdir)\""
 AM_CPPFLAGS				+= -DDOCDIR="\"$(docdir)\""
@@ -59,7 +59,10 @@ AM_CPPFLAGS				+= -DPKGLIBEXECDIR="\"$(pkglibexecdir)\""
 AM_CPPFLAGS				+= -DPSDIR="\"$(psdir)\""
 AM_CPPFLAGS				+= -DSBINDIR="\"$(sbindir)\""
 AM_CPPFLAGS				+= -DSHAREDSTATEDIR="\"$(sharedstatedir)\""
+AM_CPPFLAGS				+= -DSRCDIR="\"$(abs_srcdir)\""
 AM_CPPFLAGS				+= -DSYSCONFDIR="\"$(sysconfdir)\""
+AM_CPPFLAGS				+= -DTOP_BUILDDIR="\"$(abs_top_builddir)\""
+AM_CPPFLAGS				+= -DTOP_SRCDIR="\"$(abs_top_srcdir)\""
 
 
 # substitution routine
@@ -87,6 +90,7 @@ do_subst = sed \
 	-e 's,[@]prefix[@],$(prefix),g' \
 	-e 's,[@]exec_prefix[@],$(exec_prefix),g' \
 	-e 's,[@]bindir[@],$(bindir),g' \
+	-e 's,[@]builddir[@],$(abs_builddir),g' \
 	-e 's,[@]datadir[@],$(datadir),g' \
 	-e 's,[@]datarootdir[@],$(datarootdir),g' \
 	-e 's,[@]docdir[@],$(docdir),g' \
@@ -108,7 +112,10 @@ do_subst = sed \
 	-e 's,[@]psdir[@],$(psdir),g' \
 	-e 's,[@]sbindir[@],$(sbindir),g' \
 	-e 's,[@]sharedstatedir[@],$(sharedstatedir),g' \
+	-e 's,[@]srcdir[@],$(abs_srcdir),g' \
 	-e 's,[@]sysconfdir[@],$(sysconfdir),g' \
+	-e 's,[@]top_builddir[@],$(abs_top_builddir),g' \
+	-e 's,[@]top_srcdir[@],$(abs_top_srcdir),g' \
 	$(SUBST_EXPRESSIONS)
 do_subst_fn = \
 		echo "do_subst < ${@}.in > ${@}"; \
