--- a/build-aux/makefile-subst.am
+++ b/build-aux/makefile-subst.am
@@ -34,6 +34,15 @@
 #   contrib/makefile-subst.am
 #
 
+# load Bindle Tools file
+ifneq ($(BINDLETOOLS_CONDITIONAL),loaded)
+include $(srcdir)/$(bindletools_srcdir)/build-aux/makefile-bindle.am
+endif
+
+
+EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/makefile-subst.am
+
+
 # define directory locations for CPP
 AM_CPPFLAGS				+= -DPREFIX="\"$(prefix)\""
 AM_CPPFLAGS				+= -DEXEC_PREFIX="\"$(exec_prefix)\""
