--- a/configure.ac
+++ b/configure.ac
@@ -94,6 +94,9 @@ AC_PROG_LN_S
 # GNU Libtool Support
 LT_INIT(dlopen disable-fast-install win32-dll)
 
+# initiates bindle tools macros
+AC_BINDLE(.)
+
 # custom configure options
 AC_BINDLE_ENABLE_WARNINGS
 AC_BINDLE_WITH_PERL
