--- a/build-aux/makefile-bindle.am
+++ b/build-aux/makefile-bindle.am
@@ -31,39 +31,27 @@
 #
 #   @BINDLE_BINARIES_BSD_LICENSE_END@
 #
-#   contrib/makefile-version.am
+#   contrib/makefile-autotools.am
 #
 
-
-# load Bindle Tools file
-ifneq ($(BINDLETOOLS_CONDITIONAL),loaded)
-include $(srcdir)/$(bindletools_srcdir)/build-aux/makefile-bindle.am
-endif
+BINDLETOOLS_CONDITIONAL			= loaded
 
 
-GIT_PACKAGE_VERSION_DIR			?= include
+ACLOCAL_AMFLAGS				?=
+ACLOCAL_AMFLAGS				+= -I $(bindletools_srcdir)/m4
 
 
-GIT_PACKAGE_VERSION_FILES		 = $(GIT_PACKAGE_VERSION_DIR)/git-package-version.h
-GIT_PACKAGE_VERSION_FILES		+= $(GIT_PACKAGE_VERSION_DIR)/git-package-version.txt
+BUILT_SOURCES				?=
 
 
-BUILT_SOURCES				+= $(GIT_PACKAGE_VERSION_FILES)
-
-
-EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/git-package-version.sh
+EXTRA_DIST				?=
+EXTRA_DIST				+= $(bindletools_srcdir)/COPYING
+EXTRA_DIST				+= $(bindletools_srcdir)/README
+EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/autogen.sh
+EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/makefile-bindle.am
+EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/makefile-subst.am
 EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/makefile-version.am
-EXTRA_DIST				+= $(GIT_PACKAGE_VERSION_FILES)
-EXTRA_DIST				+= build-aux/git-tar-name.txt
-
-
-.PHONY: $(GIT_PACKAGE_VERSION_FILES)
-
-$(GIT_PACKAGE_VERSION_DIR)/git-package-version.h:
-	@@GIT_VERSION_SCRIPT@ $(top_srcdir) > /dev/null 2>&1
-
-$(GIT_PACKAGE_VERSION_DIR)/git-package-version.txt:
-	@@GIT_VERSION_SCRIPT@ $(top_srcdir) > /dev/null 2>&1
 
 
 # end of automake file
+
