--- a/build-aux/makefile-version.am
+++ b/build-aux/makefile-version.am
@@ -57,13 +57,16 @@ EXTRA_DIST				+= $(GIT_PACKAGE_VERSION_FILES)
 EXTRA_DIST				+= build-aux/git-tar-name.txt
 
 
-.PHONY: $(GIT_PACKAGE_VERSION_FILES)
+.PHONY: git-package-script-run
 
-$(GIT_PACKAGE_VERSION_DIR)/git-package-version.h:
-	@@GIT_VERSION_SCRIPT@ $(top_srcdir) > /dev/null 2>&1
+git-package-script-run:
+	@$(GIT_VERSION_SCRIPT) $(top_srcdir) > /dev/null 2> /dev/null
 
-$(GIT_PACKAGE_VERSION_DIR)/git-package-version.txt:
-	@@GIT_VERSION_SCRIPT@ $(top_srcdir) > /dev/null 2>&1
+$(GIT_PACKAGE_VERSION_DIR)/git-package-version.h: git-package-script-run
+	@touch $(top_srcdir)/${@}
+
+$(GIT_PACKAGE_VERSION_DIR)/git-package-version.txt: git-package-script-run
+	@touch $(top_srcdir)/${@}
 
 
 # end of automake file
