Adding initial file parsing functions.

--- a/Makefile.am
+++ b/Makefile.am
@@ -62,6 +62,9 @@ check_PROGRAMS				=
 doc_DATA				=
 include_HEADERS				= include/bindle.h
 bindleinclude_HEADERS			= \
+					  include/bindle/cdefs.h \
+					  include/bindle/errno.h \
+					  include/bindle/fd.h \
 					  include/bindle/utf8.h \
 					  include/bindle/regex.h \
 					  include/bindle/version.h
@@ -138,6 +141,8 @@ lib_libbindle_la_LDFLAGS		= -rpath'$(libdir)'\
 					  $(AM_LDFLAGS) \
 					  -export-symbols $(srcdir)/lib/libbindle/libbindle.sym
 lib_libbindle_la_SOURCES		= \
+					  lib/libbindle/errno.c \
+					  lib/libbindle/fd.c \
 					  lib/libbindle/utf8.c \
 					  lib/libbindle/version.c
 
