--- a/build-aux/makefile-autotools.am
+++ b/build-aux/makefile-autotools.am
@@ -34,12 +34,8 @@
 #   contrib/makefile-autotools.am
 #
 
-# load Bindle Tools file
-ifneq ($(BINDLETOOLS_CONDITIONAL),loaded)
-include $(srcdir)/$(bindletools_srcdir)/build-aux/makefile-bindle.am
-endif
 
-EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/makefile-autotools.am
+EXTRA_DIST				+= %reldir%/makefile-autotools.am
 
 .PHONY: autoreconf
 
