--- a/build-aux/makefile-bindle.am
+++ b/build-aux/makefile-bindle.am
@@ -34,24 +34,17 @@
 #   contrib/makefile-autotools.am
 #
 
-BINDLETOOLS_CONDITIONAL			= loaded
-
-
 ACLOCAL_AMFLAGS				?=
-ACLOCAL_AMFLAGS				+= -I $(bindletools_srcdir)/m4
+ACLOCAL_AMFLAGS				+= -I %reldir%/../m4
 
 
 BUILT_SOURCES				?=
 
 
 EXTRA_DIST				?=
-EXTRA_DIST				+= $(bindletools_srcdir)/COPYING
-EXTRA_DIST				+= $(bindletools_srcdir)/README
-EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/autogen.sh
-EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/bindle-autogen.sh
-EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/makefile-bindle.am
-EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/makefile-subst.am
-EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/makefile-version.am
+EXTRA_DIST				+= %reldir%/../COPYING
+EXTRA_DIST				+= %reldir%/../README
+EXTRA_DIST				+= %reldir%/makefile-bindle.am
 
 
 # end of automake file
