Fixing relative links for EXTRA_DIST files

--- a/build-aux/makefile-autotools.am
+++ b/build-aux/makefile-autotools.am
@@ -35,7 +35,7 @@
 #
 
 
-EXTRA_DIST				+= %reldir%/makefile-autotools.am
+EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/makefile-autotools.am
 
 .PHONY: autoreconf
 
