--- a/build-aux/makefile-subst.am
+++ b/build-aux/makefile-subst.am
@@ -35,7 +35,7 @@
 #
 
 
-EXTRA_DIST				+= %reldir%/makefile-subst.am
+EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/makefile-subst.am
 
 
 # define directory locations for CPP
