--- a/build-aux/makefile-bindle.am
+++ b/build-aux/makefile-bindle.am
@@ -35,16 +35,16 @@
 #
 
 ACLOCAL_AMFLAGS				?=
-ACLOCAL_AMFLAGS				+= -I %reldir%/../m4
+ACLOCAL_AMFLAGS				+= -I $(bindletools_srcdir)/m4
 
 
 BUILT_SOURCES				?=
 
 
 EXTRA_DIST				?=
-EXTRA_DIST				+= %reldir%/../COPYING
-EXTRA_DIST				+= %reldir%/../README
-EXTRA_DIST				+= %reldir%/makefile-bindle.am
+EXTRA_DIST				+= $(bindletools_srcdir)/COPYING
+EXTRA_DIST				+= $(bindletools_srcdir)/README
+EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/makefile-bindle.am
 
 
 # end of automake file
