Adding simplified autogen.sh script for project.

--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,13 @@
 a.out
 aclocal.m4
 autom4te.cache
+autoscan.log
 build/
 config.h
 config.h.in
 config.log
 config.status
 configure
+configure.scan
 stamp-h1
 xcuserdata
