--- a/configure.ac
+++ b/configure.ac
@@ -69,7 +69,7 @@ AM_INIT_AUTOMAKE(gnu std-options subdir-objects)
 # Compilers
 AC_PROG_CC
 #AC_PROG_OBJC
-#AC_PROG_CXX
+AC_PROG_CXX
 AM_PROG_CC_C_O
 AC_PROG_INSTALL
 AC_USE_SYSTEM_EXTENSIONS # replaces AC_AIX AC_GNU_SOURCE AC_MINIX
@@ -94,15 +94,46 @@ AC_PROG_LN_S
 # GNU Libtool Support
 LT_INIT(dlopen disable-fast-install win32-dll)
 
-# custom configure options
-AC_BINDLE_ENABLE_WARNINGS
-AC_BINDLE_WITH_PERL
+# check for common functions
+AC_FUNC_FORK
+AC_FUNC_MALLOC
+AC_FUNC_REALLOC
+AC_FUNC_STRERROR_R
+
+# Type checks
+AC_TYPE_INT8_T
+AC_TYPE_INT16_T
+AC_TYPE_INT32_T
+AC_TYPE_INT64_T
+AC_TYPE_SIZE_T
+AC_TYPE_SSIZE_T
+AC_TYPE_UINT8_T
+AC_TYPE_UINT16_T
+AC_TYPE_UINT32_T
+AC_TYPE_UINT64_T
+
+# check for required functions
+AC_CHECK_FUNCS([bzero],          [], [AC_MSG_ERROR([missing required functions])])
+AC_CHECK_FUNCS([memset],         [], [AC_MSG_ERROR([missing required functions])])
+AC_CHECK_FUNCS([regcomp],        [], [AC_MSG_ERROR([missing required functions])])
+AC_CHECK_FUNCS([strdup],         [], [AC_MSG_ERROR([missing required functions])])
+AC_CHECK_FUNCS([strerror],       [], [AC_MSG_ERROR([missing required functions])])
+AC_CHECK_FUNCS([strncasecmp],    [], [AC_MSG_ERROR([missing required functions])])
+AC_CHECK_FUNCS([strtol],         [], [AC_MSG_ERROR([missing required functions])])
 
 # enables getopt_long if header and functions were found
-AC_CHECK_HEADERS([getopt.h], [AC_DEFINE_UNQUOTED(USE_GETOPT_LONG, 1, [Use GNU getopt_long])])
+AC_CHECK_HEADERS([fcntl.h],      [], [AC_MSG_ERROR([missing required headers])])
+AC_CHECK_HEADERS([getopt.h],     [], [AC_MSG_ERROR([missing required headers])])
+
+# initiates bindle tools macros
+AC_BINDLE(contrib/bindletools)
 
 # determine PACKAGE_VERSION via Git
 AC_BINDLE_GIT_PACKAGE_VERSION([build-aux/git-package-version.sh])
+
+# custom configure options
+AC_BINDLE_ENABLE_WARNINGS
+AC_BINDLE_WITH_PERL
 
 # Creates outputs
 AC_CONFIG_FILES([Makefile])
