--- a/configure.ac
+++ b/configure.ac
@@ -133,7 +133,7 @@ AC_BINDLE_GIT_PACKAGE_VERSION([build-aux/git-package-version.sh])
 
 # custom configure options
 AC_BINDLE_ENABLE_WARNINGS
-AC_BINDLE_WITH_PERL
+AC_BINDLETOOLS_LIBRARY
 
 # Creates outputs
 AC_CONFIG_FILES([Makefile])
