--- a/configure.ac
+++ b/configure.ac
@@ -36,11 +36,11 @@
 
 AC_PREREQ([2.65])
 
-AC_COPYRIGHT([Copyright (c) 2012 Bindle Binaries <syzdek@bindlebinaries.com>.])
-AC_REVISION(0.2)
-AC_INIT([Bindle Binaries Tools],[0.2],[syzdek@bindlebinaries.com],[bindletools])
+AC_COPYRIGHT([Copyright (c) 2012, 2016 Bindle Binaries <syzdek@bindlebinaries.com>.])
+AC_REVISION(0.4)
+AC_INIT([Bindle Binaries Tools],[0.4],[syzdek@bindlebinaries.com],[bindletools])
 
-AC_SUBST([RELEASE_MONTH],["September 2012"])
+AC_SUBST([RELEASE_MONTH],["August 2016"])
 
 # directory locations
 AC_CONFIG_AUX_DIR([build-aux])
